--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@
     height: 60px;
     bottom: 40px;
     right: 40px;
-    background-color: #0C9;
+    background-color: white;
     color: #FFF;
     border-radius: 50px;
     text-align: center;
@@ -36,93 +36,299 @@
     text-align: center;
 }
 
-.chat-box {
-    border: 1px solid;
-    padding: 10px;
-    width: 100px;
-    height: 200px;
+/*.chat-box {*/
+/*    border: 1px solid;*/
+/*    padding: 10px;*/
+/*    width: 100px;*/
+/*    height: 50px;*/
+/*}*/
+
+.chat-box .time {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.chat-box .time span {
+  background-color: green;
+  display: inline-block;
+  border-radius: 3px;
+  text-align: center;
+  padding: 2px 20px;
+  color: #fff;
+  opacity: 0.3;
+}
+.chat-box .message {
+  margin-bottom: 10px;
+}
+.chat-box .message .messageText {
+  text-align: left;
+  color: green;
+}
+.chat-box .message.sol {
+  text-align: left;
+}
+.chat-box .message.sag {
+  text-align: right;
+}
+.chat-box .message .resim {
+  background: #FF0044 none no-repeat center;
+  vertical-align: text-top;
+  background-size: cover;
+  display: inline-block;
+  position: relative;
+  color: green;
+  height: 40px;
+  width: 40px;
+}
+.chat-box .message .messageText {
+  background-color: #FF0044;
+  vertical-align: text-top;
+  display: inline-block;
+  position: relative;
+  line-height: 20px;
+  max-width: 165px;
+  color: #FFFFFF;
+  padding: 10px;
+}
+.chat-box .message.left .userPortrait,
+.message.sag .messageText {
+  border-radius: 5px 0 0 5px;
+}
+.chat-box .message.sag .userPortrait,
+.message.sol .messageText {
+  border-radius: 0 5px 5px 0;
+}
+.chat-box .message.mtLine.sol .messageText {
+  border-radius: 0 5px 5px 0;
+}
+.chat-box .message.mtLine.sag .messageText {
+  border-radius: 5px 0 0 5px;
+}
+.chat-box .message .messageText:before {
+  border-color: transparent #FF0044;
+  border-style: solid;
+  position: absolute;
+  border-width: 0;
+  display: block;
+  content: "";
+  z-index: 1;
+}
+.chat-box .message.sol .messageText:before {
+  border-width: 0 10px 10px 0;
+  left: -10px;
+  top: 0;
+}
+.chat-box .message.sag .messageText:before {
+  border-width: 10px 0 0 10px;
+  right: -10px;
+  top: 30px;
+}
+.chat-box .message .messageText:after {
+  content: attr(data-time);
+  color: rgba(255,255,255,0.5);
+  position: absolute;
+  line-height: 20px;
+  display: block;
+  bottom: 2px;
+  z-index: 1;
+}
+.chat-box .message.sol .messageText:after {
+  margin-left: 5px;
+  left: 100%;
+}
+.chat-box .message.sag .messageText:after {
+  margin-right: 5px;
+  right: 100%;
 }
 
-.header-wrapper {
+#chat, #chat:after, .chatbox {
+    transition: all .4s ease-in-out
+}
+
+#chat, #close-chat, .minim-button, .maxi-button, .chat-text {
+    font-weight: 700;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    height: 20px;
+    line-height: 20px
+}
+
+#chat, #close-chat, .chatbox {
+    border: 1px solid #A8A8A8
+}
+
+#chat:after, #chat:before {
+    position: absolute;
+    border-style: solid;
+    content: ""
+}
+
+.chatbox {
     position: fixed;
-    z-index: 2;
-    top: 0px;
+    bottom: 0;
+    left: 50px;
+    margin: 0 0 -1500px;
+    background: #fff;
+    border-bottom: none;
+    padding: 28px 10px 10px;
+    z-index: 100000
+}
+
+#close-chat {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    font-size: 24px;
+    border: 1px solid #dedede;
+    width: 20px;
+    background: #fefefe;
+    z-index: 2
+}
+
+#minim-chat, #maxi-chat {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    background-color: white;
-    padding: 5px 0px;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
+    height: 20px;
+    line-height: 20px;
+    cursor: pointer;
+    z-index: 1
 }
 
-.chat-screen {
-    padding: 10px 0px;
-    padding-top: 150px;
-    background-image: url("../chatBg.png");
-    min-height: 1000vh;
+.minim-button {
+    position: absolute;
+    top: 2px;
+    right: 26px;
+    font-size: 24px;
+    border: 1px solid #dedede;
+    width: 20px;
+    background: #fefefe
 }
 
-.chat__icon{
-    font-size:18px;
-    transition:opacity 0.5s ease-in-out;
+.maxi-button {
+    position: absolute;
+    top: 2px;
+    right: 26px;
+    font-size: 24px;
+    border: 1px solid #dedede;
+    width: 20px;
+    background: #fefefe;
 }
 
-.chat-screen .chat__messages{
-    border-top:1px solid #f7f7f7;
-    padding-top:30px;
-    display:flex;
-    flex-direction:column;
-    align-items: center;
-    padding:0px 20px;
+.chat-text {
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    font-size: 16px;
 }
 
-.chat__messages .chat__timestamp{
-    background-color:white;
-    font-size:12px;
-    padding:5px 10px;
-    border-radius:10px;
-    margin-bottom:30px;
-    box-shadow:rgba(0, 0, 0, 0.3) 0px 8px 16px -8px, rgba(0,0,0,0.024) 0px -6px 16px -6px;
-    text-transform: uppercase;
-    font-weight:700;
+#chat {
+    width: 40px;
+    border-radius: 3px;
+    padding: 2px 8px;
+    font-size: 12px;
+    background: #fff;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0)
 }
 
-.message{
-    display:flex;
-    align-items:flex-start;
-    width:50%;
-    margin-bottom:20px;
+#chat:before {
+    border-width: 10px 11px 0 0;
+    border-color: #A8A8A8 transparent transparent;
+    left: 7px;
+    bottom: -10px
 }
 
-.message .message__content{
-    width:80%;
+#chat:after {
+    border-width: 9px 8px 0 0;
+    border-color: #fff transparent transparent;
+    left: 8px;
+    bottom: -8px
 }
 
-.message .message__bubble{
-    background-color: white;
-    border-radius:15px;
-    box-shadow:rgba(0, 0, 0, 0.3) 0px 8px 16px -8px, rgba(0,0,0,0.024) 0px -6px 16px -6px;
-    padding:10px 20px;
-    border:black;
+#chat:hover {
+    background: #ddd;
+    -webkit-animation-name: hvr-pulse-grow;
+    animation-name: hvr-pulse-grow;
+    -webkit-animation-duration: .3s;
+    animation-duration: .3s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate
 }
 
-.chat-message .message__bubble{
-    border-bottom-left-radius:0px;
-    background-image: linear-gradient(to right, #fc00ff, #00dbde);
-    color:white;
-    display:block;
-    font-weight:600;
+#chat:hover:after {
+    border-color: #ddd transparent transparent !important
 }
 
-@keyframes incomingAnim{
-    from{
-        opacity:0;
-        transform: translateX(-100px);
+.animated-chat {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in
+}
+
+@-webkit-keyframes tada {
+    0% {
+        -webkit-transform: scale(1)
     }
-    to{
-        opacity:1;
-        transform:none;
-
+    10%, 20% {
+        -webkit-transform: scale(.9) rotate(-3deg)
+    }
+    30%, 50%, 70%, 90% {
+        -webkit-transform: scale(1.1) rotate(3deg)
+    }
+    40%, 60%, 80% {
+        -webkit-transform: scale(1.1) rotate(-3deg)
+    }
+    100% {
+        -webkit-transform: scale(1) rotate(0)
     }
 }
-.chat-message{
-    animation:incomingAnim 1s linear forwards
+
+@keyframes tada {
+    0% {
+        transform: scale(1)
+    }
+    10%, 20% {
+        transform: scale(.9) rotate(-3deg)
+    }
+    30%, 50%, 70%, 90% {
+        transform: scale(1.1) rotate(3deg)
+    }
+    40%, 60%, 80% {
+        transform: scale(1.1) rotate(-3deg)
+    }
+    100% {
+        transform: scale(1) rotate(0)
+    }
+}
+
+.tada {
+    -webkit-animation-name: tada;
+    animation-name: tada
+}
+
+@-webkit-keyframes hvr-pulse-grow {
+    to {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1)
+    }
+}
+
+@keyframes hvr-pulse-grow {
+    to {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1)
+    }
+}
+
+body {
+    background: #dedede
 }
