--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta property="og:title" content="Vovel! | 오디오 기반 채팅형 소설플랫폼!" />
-        <meta property="og:description" content="소설을 채팅형으로 변환후 오디오 콘텐츠로 만들 수 있는 사이트입니다." />
-        <meta property="og:image" content="{{ url_for('static', filename='thumbnail.png') }}" />
+        <meta property="og:title" content="Vovel! | 오디오 기반 채팅형 소설플랫폼!"/>
+        <meta property="og:description" content="소설을 채팅형으로 변환후 오디오 콘텐츠로 만들 수 있는 사이트입니다."/>
+        <meta property="og:image" content="{{ url_for('static', filename='thumbnail.png') }}"/>
 
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -34,7 +34,8 @@
                 showBookList();
             });
 
-            let bookList;
+            let book;
+
             //브라우저에 주소가 입력되면 책 목록을 가져온다.
             function showBookList() {
                 $.ajax({
@@ -61,27 +62,27 @@
 
 
             //책 리스트에서  책제목을 클릭시 스토리를 가져옴.
-            function titleClick() {
-                bookList["title"].click(function () {
-                    $.ajax({
-                        type: "GET",
-                        url: "/book?title_give",
-                        data: {},
-                        success: function (response) {
-                            if (response["result"] == "success") {
-                                chatify(bookList["story"])
-                            } else {
-                                alert("스토리를 받아오지 못했습니다 ")
-                            }
+            // Tutor: titleClick 함수의 argument로 title을 추가합니다.
+            function titleClick(title) {
+
+                $.ajax({
+                    type: "GET",
+                    url: `/book?title_give=${title}`,
+                    data: {},
+                    success: function (response) {
+                        if (response["result"] == "success") {
+                            book = response["book"];
+                        } else {
+                            alert("스토리를 받아오지 못했습니다 ")
                         }
-                    })
+                    }
                 })
             }
 
             //책 리스트 목록 만들기
             function makeCard(title, author) {
                 let tempHtml = `<tr>
-                            <td><a href="#" onclick="Chatify('${title}')" id="title-box">${title}</a></td>
+                            <td><a href="#" onclick="titleClick('${title}')" id="title-box">${title}</a></td>
                             <td class = "author" id="author-box">${author}</td>
                             </tr>`;
                 $("#bookList-box").append(tempHtml);
@@ -121,10 +122,10 @@
                     success: function (response) {
                         if (response["result"] == "success") {
                             let storylines = response(story["text"]);
-                            $("#bring-button").onclick = function (){
+                            $("#bring-button").onclick = function () {
                                 for (let i = 0; i < storylines.length; i++) {
                                     makeLines(storylines[i]["text"])
-                            }
+                                }
                             }
                         } else {
                             alert("문장을 가져오지 못했습니다. ")
@@ -151,12 +152,10 @@
             {#    e.style.display = "none";#}
             {#    var e = document.getElementById("chatbox");#}
             {#    e.style.margin = "0";#}
-            {#}#}
             {##}
             {#function closeChatbox() {#}
             {#    var e = document.getElementById("chatbox");#}
             {#    e.style.margin = "0 0 -1500px 0";#}
-            {#}#}
             {##}
             {#function minimChatbox() {#}
             {#    var e = document.getElementById("minim-chat");#}
@@ -165,7 +164,6 @@
             {#    e.style.display = "block";#}
             {#    var e = document.getElementById("chatbox");#}
             {#    e.style.margin = "0 0 -460px 0";#}
-            {#}#}
 
 
         </script>
@@ -185,8 +183,8 @@
                 <hr class="my-4">
                 <!-- 파일을 업로드할 수 있는 섹션.-->
                 <p class="lead">
-                <!-- Tutor: Ajax로 보낼 것이므로 Form tag를 제거합니다. -->
-                <!-- Tutor: 받으려는 값에 id를 부여하여 jQuery($)가 쉽게 캐치할 수 있도록 합니다. -->
+                    <!-- Tutor: Ajax로 보낼 것이므로 Form tag를 제거합니다. -->
+                    <!-- Tutor: 받으려는 값에 id를 부여하여 jQuery($)가 쉽게 캐치할 수 있도록 합니다. -->
                 <h5>소설 제목 </h5><input type="text" name="title" id="book-title"><br><br>
                 <h5>저자</h5><input type="text" name="author" id="book-author"><br><br>
                 <h5>소설 내용 </h5><textarea cols="50" rows="10" id="book-story"></textarea><br><br>
@@ -212,57 +210,57 @@
                 </table>
             </div>
 
-{#            <!-- 채팅 박스. 챗은 왼쪽 정렬, 나레이션은 중앙 정렬  -->#}
-{#            <div class="chat-box" onclick="loadChatbox()" id="chat">보기</div>#}
-{#            <div class="chatbox">#}
-{#                <div class="time"><span>10:42</span></div>#}
-{##}
-{#                <div class="message sol">#}
-{#                    <div class="resim"#}
-{#                         style="background-image: url('https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-prn2/t1/1461137_576157439120105_582502926_n.jpg');"></div>#}
-{#                    <div class="messageText" data-time="10:42">#}
-{#                        thats ok#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="message sag mtLine">#}
-{#                    <div class="messageText" data-time="10:43">#}
-{#                        ok than#}
-{#                    </div>#}
-{#                    <div class="resim"#}
-{#                         style="background-image: url('https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-prn2/t1/1393075_669686723071617_1541630705_n.jpg');"></div>#}
-{#                </div>#}
-{#                <div class="message sol mtLine">#}
-{#                    <div class="resim"#}
-{#                         style="background-image: url('https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1/q71/1422532_452755621503523_1504727417_n.jpg');"></div>#}
-{#                    <div class="messageText" data-time="10:45">#}
-{#                        are you sure#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="message sol">#}
-{#                    <div class="resim"#}
-{#                         style="background-image: url('https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/1395115_368377233300847_323365594_n.jpg');"></div>#}
-{#                    <div class="messageText" data-time="10:45">#}
-{#                        yeah are you sure man?#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="message sol mtLine">#}
-{#                    <div class="resim"#}
-{#                         style="background-image: url('https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-prn2/t1/1461137_576157439120105_582502926_n.jpg');"></div>#}
-{#                    <div class="messageText" data-time="10:58">#}
-{#                        yeah im totally sure.#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="message sol">#}
-{#                    <div class="resim"#}
-{#                         style="background-image: url('https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc1/1601244_265297516958879_798390578_n.png');"></div>#}
-{#                    <div class="messageText" data-time="11:01">#}
-{#                        hey whats going on?#}
-{#                    </div>#}
-{#                </div>#}
-{#                </div>#}
-{#            <div id="close-chat" onclick="closeChatbox()"></div>#}
-{##}
-{#            </div>#}
+            {#            <!-- 채팅 박스. 챗은 왼쪽 정렬, 나레이션은 중앙 정렬  -->#}
+            {#            <div class="chat-box" onclick="loadChatbox()" id="chat">보기</div>#}
+            {#            <div class="chatbox">#}
+            {#                <div class="time"><span>10:42</span></div>#}
+            {##}
+            {#                <div class="message sol">#}
+            {#                    <div class="resim"#}
+            {#                         style="background-image: url('https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-prn2/t1/1461137_576157439120105_582502926_n.jpg');"></div>#}
+            {#                    <div class="messageText" data-time="10:42">#}
+            {#                        thats ok#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#                <div class="message sag mtLine">#}
+            {#                    <div class="messageText" data-time="10:43">#}
+            {#                        ok than#}
+            {#                    </div>#}
+            {#                    <div class="resim"#}
+            {#                         style="background-image: url('https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-prn2/t1/1393075_669686723071617_1541630705_n.jpg');"></div>#}
+            {#                </div>#}
+            {#                <div class="message sol mtLine">#}
+            {#                    <div class="resim"#}
+            {#                         style="background-image: url('https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1/q71/1422532_452755621503523_1504727417_n.jpg');"></div>#}
+            {#                    <div class="messageText" data-time="10:45">#}
+            {#                        are you sure#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#                <div class="message sol">#}
+            {#                    <div class="resim"#}
+            {#                         style="background-image: url('https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/1395115_368377233300847_323365594_n.jpg');"></div>#}
+            {#                    <div class="messageText" data-time="10:45">#}
+            {#                        yeah are you sure man?#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#                <div class="message sol mtLine">#}
+            {#                    <div class="resim"#}
+            {#                         style="background-image: url('https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-prn2/t1/1461137_576157439120105_582502926_n.jpg');"></div>#}
+            {#                    <div class="messageText" data-time="10:58">#}
+            {#                        yeah im totally sure.#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#                <div class="message sol">#}
+            {#                    <div class="resim"#}
+            {#                         style="background-image: url('https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc1/1601244_265297516958879_798390578_n.png');"></div>#}
+            {#                    <div class="messageText" data-time="11:01">#}
+            {#                        hey whats going on?#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#                </div>#}
+            {#            <div id="close-chat" onclick="closeChatbox()"></div>#}
+            {##}
+            {#            </div>#}
 
             <div id="chat" class="animated-chat tada" onclick="loadChatbox()">Chat</div>
             <div class="chatbox" id="chatbox">
@@ -275,9 +273,9 @@
                     document.write('</iframe></div></div>');
                     //]]>
                 </script>
-{#                <div id="close-chat" onclick="closeChatbox()">&times;</div>#}
-{#                <div id="minim-chat" onclick="minimChatbox()"><span class="minim-button">&minus;</span></div>#}
-{#                <div id="maxi-chat" onclick="loadChatbox()"><span class="maxi-button">&plus;</span></div>#}
+                {#                <div id="close-chat" onclick="closeChatbox()">&times;</div>#}
+                {#                <div id="minim-chat" onclick="minimChatbox()"><span class="minim-button">&minus;</span></div>#}
+                {#                <div id="maxi-chat" onclick="loadChatbox()"><span class="maxi-button">&plus;</span></div>#}
             </div>
         </div>
     </body>
