feat: 채팅 기능 동작하도록 구현

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,7 +333,9 @@ body {
     background: #dedede
 }
 
-.chat-box {
+#chat-box {
+    text-align: center;
     width: 50%;
     margin: 0 auto;
+    margin-bottom: 200px;
 }
